sumo/tests/traci/VariableRetrieval/POI/errors/UnknownID/errors.traci
Error: Answered with error to command 167: POI 'xxx' is not known
